@@ -1,3 +1,10 @@
+Latest stuff
+------------------------------------------------------------------------
+
+ * Support building with no extended attributes support when NO_XATTR
+   macro is predefined to non-0 value (e.g. put -DNO_XATTR in CFLAGS).
+
+
 v1.1.2                                                      (2018-01-06)
 ------------------------------------------------------------------------
 
